workloads/devops1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ecomerce
  namespace: devops1
  labels:
    app: app-ecommerce
spec:
  selector:
    matchLabels:
      app: app-ecommerce
  replicas: 1
  template:
    metadata:
      labels:
        app: app-ecommerce
    spec:
      containers:
      - name: app
        image: ncamposopenlegacy/ecomerceweb:0.0.1-snapshot_1
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 310m
            memory: 500Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 5
