workloads/devops2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team2-ecommerce
  namespace: devops2
  labels:
    app: team2-ecommerce
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.init: regex:^3.10.*
    fluxcd.io/tag.podinfod: semver:~2.1
spec:
  selector:
    matchLabels:
      app: team2-ecommerce
  replicas: 1
  template:
    metadata:
      labels:
        app: team2-ecommerce
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
        - name: team2
          image: juliocesarvc/team2-ecommerce:0.0.1
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
