workloads/equipo3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-equipo3
  labels:
    app: app-equipo3
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    matchLabels:
      app: app-equipo3
  replicas: 1
  template:
    metadata:
      labels:
        app: app-equipo3
    spec:
      containers:
      - name: app
        image: rubaz/calculator-app:0.0.1
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            #cuantos segundos espera para empezar a verificar
          initialDelaySeconds: 15
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
