workloads/equipo4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-equipo4
  labels:
    app: app-equipo4
spec:
  selector:
    matchLabels:
      app: app-equipo4
  replicas: 1
  template:
    metadata:
      labels:
        app: app-equipo4
    spec:
      containers:
      - name: app
        image: ncamposopenlegacy/clase4_practica4:0.0.1-snapshot
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            #cuantos segundos espera para empezar a verificar
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 5
