workloads/equipo6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-${OWNER}
  labels:
    app: app-${OWNER}
spec:
  selector:
    matchLabels:
      app: app-${OWNER}
  replicas: 1
  template:
    metadata:
      labels:
        app: app-${OWNER}
    spec:
      containers:
      - name: app
        image: ${OWNER}/miapp-equipo06:${TAG}
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /version
            port: 8080
            #cuantos segundos espera para empezar a verificar
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 5
