workloads/devops1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ecommerce
  namespace: devops1
  labels:
    app: app-ecommerce
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-ecommerce
