workloads/equipo1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-equipo1
  labels:
    app: app-equipo1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
      app: app-equipo1
