workloads/equipo2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-equipo2
  labels:
    app: app-equipo2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-equipo2
