workloads/equipo4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-equipo-04
  labels:
    app: app-equipo-04
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-equipo-04
