workloads/equipo6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-equipo-06
  labels:
    app: app-equipo-06
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-equipo-06
