workloads/c7-calc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: c7-calc
  annotations:
    kubernetes.io/ingress.class: nginx
    #En este cluster no tenemos SSL, lo deshabilitamos
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: c7-calc.45.55.104.239.nip.io
      http:
        paths:
          - backend:
              serviceName: c7-calc
              servicePort: 80
